--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "cordova-plugin-file": "^6.0.2",
     "core-js": "^2.5.4",
     "rxjs": "~6.5.1",
+    "string-similarity": "^3.0.0",
     "tesseract.js": "^1.0.19",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.29"
