--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.1.0",
+    "angular-progress-bar": "^1.0.9",
     "angularfire2": "^5.2.1",
     "cordova-android": "^8.0.0",
     "cordova-browser": "^6.0.0",
@@ -38,7 +39,7 @@
     "node-sass": "^4.12.0",
     "rxjs": "~6.5.1",
     "string-similarity": "^3.0.0",
-    "tesseract.js": "^1.0.19",
+    "tesseract.js": "^2.0.0-alpha.15",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.29"
   },
